[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/investigation_v3.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/case_4/invest_4/ametod_day1.gd" type="Script" id=2]
[ext_resource path="res://sprites/background/ametod_bg.png" type="Texture" id=3]
[ext_resource path="res://scenes/character_scenes/character_egorich.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/character_scenes/character_paltos.tscn" type="PackedScene" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="back_ground" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="characters_all" type="Node2D" parent="."]
position = Vector2( -1, -115 )

[node name="character_egorich" parent="characters_all" instance=ExtResource( 4 )]
position = Vector2( 1, 115 )

[node name="character_paltos" parent="characters_all" instance=ExtResource( 5 )]
position = Vector2( 32.0918, 132.143 )

[node name="POIs" type="Node2D" parent="."]
modulate = Color( 1, 1, 1, 0 )

[node name="poi_1" type="Button" parent="POIs"]
margin_left = 5.0
margin_top = 95.0
margin_right = 421.0
margin_bottom = 339.0
text = "87"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="poi_2" type="Button" parent="POIs"]
margin_left = 762.0
margin_top = 84.0
margin_right = 827.0
margin_bottom = 385.0
text = "58"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="poi_3" type="Button" parent="POIs"]
margin_left = 831.0
margin_top = 249.0
margin_right = 1024.0
margin_bottom = 597.0
text = "79"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="investigation_screen" parent="." instance=ExtResource( 1 )]

[connection signal="pressed" from="POIs/poi_1" to="investigation_screen" method="_on_POI_pressed"]
[connection signal="pressed" from="POIs/poi_2" to="investigation_screen" method="_on_POI_pressed"]
[connection signal="pressed" from="POIs/poi_3" to="investigation_screen" method="_on_POI_pressed"]
